--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ body{
     flex: 1 1 auto;
 }
 [class*="__container"]{
-    max-width: 1057px;
+    max-width: 1087px;
     margin: 0 auto;
     padding: 0 15px;
 }
@@ -56,8 +56,6 @@ body{
     display: flex;
     min-height: 114px;
     align-items: center;
-}
-.header__logo {
 }
 .header__menu {
     flex: 1 1 auto;
@@ -81,10 +79,16 @@ body{
     color: #000;
     letter-spacing: 1px;
 }
+.menu__link:hover{
+    text-decoration: underline;
+}
 .header__button {
+    position: relative;
+    z-index: 5;
     flex: 0 0 252px;
     display: flex;
     justify-content: flex-end;
+    align-items: center;
 }
 .button {
     border-radius: 5px;
@@ -108,4 +112,107 @@ body{
 }
 .button_blue:hover{
     background-color: #4f81d1;
+}
+/*-----------------------*/
+.icon-menu,
+.close-icon-menu {
+    display: none;
+}
+
+@media(max-width: 1087px){
+    [class*="__container"]{
+        max-width: 970px;
+    }
+}
+@media(max-width: 991.98px){
+    [class*="__container"]{
+        max-width: 750px;
+    }
+    .header__container {
+        min-height: 80px;
+    }
+    .menu__item {
+        margin: 0px 30px 0px 0px;
+    }
+    .header__button{
+        flex: 0 0 170px;
+    }
+}
+@media(max-width: 767.98px){
+    [class*="__container"]{
+        max-width: none;
+    }
+    .menu__body{
+        position: fixed;
+        top: 0;
+        left: -100%;
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+        background-color: rgba(236,88,99, 0.3);
+        padding: 150px 15px 30px 15px;
+        transition: left 0.3s ease 0s;
+    }
+    .header:target .menu__body{
+        left: 0;
+    }
+    .menu__list{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .menu__item{
+        margin: 0px 0px 25px 0px;
+    }
+    .menu__item:last-child{
+        margin-bottom: 0px;
+    }
+    .menu__link{
+        color: #fff;
+        font-size: 20px;
+    }
+    .close-icon-menu,
+    .icon-menu{
+        position: relative;
+        display: flex;
+        flex: 0 0 30px;
+        height: 18px;
+        flex-direction: column;
+        justify-content: space-between;  
+        margin: 0px 0px 0px 20px;
+    }
+    .close-icon-menu{
+        height: 100%;
+        display: none;
+    }
+    .icon-menu span,
+    .icon-menu::after,
+    .icon-menu::before,
+    .close-icon-menu::after,
+    .close-icon-menu::before{
+        content: '';
+        background-color: #000; 
+        height: 2px;
+    }
+    .close-icon-menu::after{
+      transform: rotate(39deg);  
+    }
+    .close-icon-menu::before{
+        transform: rotate(-39deg);
+    }
+    .header:target .icon-menu{
+        display: none;
+    }
+    .header:target .close-icon-menu{
+        display: flex;
+    }
+}
+@media(max-width: 479.98px){
+    .header__logo{
+        flex: 0 0 70px;
+        overflow: hidden;
+    }
+    .button{
+        background-color: #EC5863;
+    }
 }
