--- a/css/style.css
+++ b/css/style.css
@@ -143,16 +143,28 @@ body{
 /*-------------------------------------------*/
 .get-started {
     background-color: #FAFBFD;
-    padding: 153px 0px 48px 0px;
 }
 .get-started__container {
+    position: relative;
+    padding: 153px 15px 48px 15px;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
 }
+.get-started__container::before{
+    content: '';
+    position: absolute;
+    width: 100vw;
+    height: 100%;
+    right: 267px;
+    top: 0;
+    transform: translate(100%, 0px);
+    border-radius: 30px 0px 0px 30px;
+    background-color:#EC5863;
+}
 .get-started__content {
     flex: 0 1 48%;
-    padding: 0px 0px 0px 20px;
+    padding: 0px 20px;
 }
 .get-started__block-text {
     max-width: 410px;
@@ -189,12 +201,83 @@ body{
     color: #000;
 }
 .get-started__image {
+    position: relative;
     flex: 0 1 52%;
+    z-index: 2;
 }
 .get-started__image img{
     max-width: 100%;
 } 
+/*----------------------------*/
+.stay-safe {
+    padding: 79px 0;
+}
+.stay-safe__container {
+    display: flex;
+    align-items: center;
+}
+.stay-safe__content {
+    flex: 0 1 50%;
+}
+.stay-safe__media {
+    flex: 0 1 50%;
+}
+.media-stay-safe {
+    position: relative;
+    padding: 56px 0px 27px 0px;
+    width: 373px;
+    text-align: center;
+}
+.media-stay-safe__image {
+    position: relative;
+    display: inline-block;
+    box-shadow: 2px 4px 32px rgba(0, 0, 0, 0.12);
+    border-radius: 16px;
+    width: 61.5%;
+}
+.media-stay-safe__image img{
+    position: relative;
+    z-index: 5;
+    max-width: 100%;
+}
+.media-stay-safe__image::after{
+    content: '';
+    position: absolute;
+    bottom: -12px;
+    left: 12px;
+    width: 206px;
+    height: 27px;
+    background: rgba(240, 240, 240, 0.49);
+    border-radius: 16px;
+    z-index: 2;
+}
+.media-stay-safe__item {
+    position: absolute;
+    background-color: #EC5863;
+    border-radius: 30px;
+    width: 77px;
+    height: 77px;
+}
+.media-stay-safe__item_1 {
+    top: 0;
+    left: 0;
+    width: 147px;
+    height: 147px;
+}
+.media-stay-safe__item_2 {
+    bottom: 0;
+    left: 33px;
+}
+.media-stay-safe__item_3 {
+    bottom: 107px;
+    right: 38px;
+}
 
+@media(min-width: 991.98px){
+    .stay-safe__media {
+        padding: 0px 0px 0px 47px;
+    }
+}
 @media(max-width: 1087px){
     [class*="__container"]{
         max-width: 970px;
@@ -213,6 +296,14 @@ body{
     .header__button{
         flex: 0 0 170px;
     }
+    .get-started__container::before{
+        right: 185px;
+        top: 0;
+        border-radius: 20px 0px 0px 20px;
+    }
+    .stay-safe{
+        padding: 40px 0;
+    }
 }
 @media(max-width: 767.98px){
     [class*="__container"]{
@@ -225,7 +316,7 @@ body{
         width: 100%;
         height: 100%;
         overflow: auto;
-        background-color: rgba(236,88,99, 0.3);
+        background-color: #fff;
         padding: 150px 15px 30px 15px;
         transition: left 0.3s ease 0s;
     }
@@ -256,7 +347,7 @@ body{
         margin-bottom: 0px;
     }
     .menu__link{
-        color: #fff;
+        color: #000;
         font-size: 20px;
     }
     .icon-menu{
@@ -305,6 +396,42 @@ body{
     .header:target .close-icon-menu{
         display: flex;
     }
+    .block-text__title{
+        font-size: 34px;
+    }
+    .get-started__container{
+        padding: 100px 15px 30px 15px;
+    }
+    .get-started__container::before{
+        display: none;
+    }
+    .get-started__block-text {
+        max-width: none;
+    }
+    .get-started__content{
+        flex: 1 1 100%;
+        padding: 0;
+    }
+    .get-started__image{
+        flex: 1 1 100%;
+        text-align: center;
+        padding: 30px 0;
+    }
+    .get-started__video{
+        padding: 0;
+    }
+    .stay-safe{
+        padding: 30px 0;
+    }
+    .stay-safe__container{
+        flex-direction: column-reverse;
+    }
+    .stay-safe__content{
+        margin: 0px 0px 30px 0px;
+    }
+    .media-stay-safe{
+        width: 290px;
+    }
 }
 @media(max-width: 479.98px){
     .header__logo{
@@ -313,5 +440,8 @@ body{
     }
     .button{
         background-color: #EC5863;
+    }
+    .media-stay-safe{
+        width: 290px;
     }
 }
