--- a/css/style.css
+++ b/css/style.css
@@ -245,7 +245,7 @@ body{
     position: absolute;
     bottom: -12px;
     left: 12px;
-    width: 206px;
+    width: 61.5%;
     height: 27px;
     background: rgba(240, 240, 240, 0.49);
     border-radius: 16px;
@@ -272,6 +272,104 @@ body{
     bottom: 107px;
     right: 38px;
 }
+/*----------------------------*/
+.experts {
+    background-color: #FAFBFD;
+    padding: 103px 0px 109px 0px;
+}
+.experts__body{
+    display: flex;
+    align-items: center;
+}
+.experts__content{
+    flex: 0 1 50%;
+    padding: 0px 20px 0px 0px;
+}
+.experts__block-text{
+    max-width: 400px;
+}
+.experts__video{
+    position: relative;
+    flex: 0 1 50%;
+    padding: 0px 0px 30% 0px;
+}
+.experts__video iframe{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    object-fit: cover;
+}
+.statistics-experts {
+    max-width: 654px;
+    margin: 0 auto;
+    position: relative;
+}
+.statistics-experts__body {
+    position: relative;
+    background-color: #fff;
+    box-shadow: 0px 2px 24px rgba(88, 126, 236, 0.15);
+    border-radius: 16px;
+    margin: 0px 0px 80px 0px;
+    z-index: 2;
+}
+.statistics-experts__decor {
+    position: absolute;
+    border-radius: 30px;
+    background-color: #EC5863;
+}
+.statistics-experts__decor_1 {
+    width: 66px;
+    height: 66px;
+    transform: rotate(-30deg);
+    bottom: -19px;
+    left: -18px;
+    border-radius: 16px;
+}
+.statistics-experts__decor_2 {
+    width: 97px;
+    height: 97px;
+    right: 50%;
+    top: -40px;
+    transform: rotate(15deg);
+}
+.statistics-experts__decor_3 {
+    width: 127px;
+    height: 127px;
+    right: -51px;
+    top: 0;
+    transform: rotate(-30deg);
+}
+.body-statistics-experts {
+    padding: 25px 80px;
+    display: flex;
+    align-items: center;
+}
+.body-statistics-experts__item {
+    flex: 0 1 25%;
+    text-align: center;
+}
+.body-statistics-experts__item:last-child {
+    flex: 0 1 50%;
+}
+.body-statistics-experts__value {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.2;
+    letter-spacing: 1px;
+    color: #EC5863;
+    margin-bottom: 5px;
+}
+.body-statistics-experts__text {
+    font-weight: 700;
+    font-size: 11px;
+    line-height: 1.8;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    color:#000;
+}
+
 
 @media(min-width: 991.98px){
     .stay-safe__media {
