--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,13 @@ body{
     line-height: 126%;
     color:#000;
 }
+.block-text_center{
+    text-align: center;
+}
+.block-text__text_mw{
+    max-width: 460px; 
+    margin: 0 auto;
+}
 .block-text__title:not(:last-child){
     margin: 0px 0px 12px 0px;
 }
@@ -292,6 +299,9 @@ body{
     position: relative;
     flex: 0 1 50%;
     padding: 0px 0px 30% 0px;
+    box-shadow: 0px 4px 18px rgba(88, 126, 236, 0.18);
+    border-radius: 8px;
+    overflow: hidden;
 }
 .experts__video iframe{
     position: absolute;
@@ -369,8 +379,99 @@ body{
     text-transform: uppercase;
     color:#000;
 }
-
-
+/*---------------------------*/
+.healthcare {
+    padding: 80px 0px 35px 0px;
+}
+.healthcare__column {
+    position: relative;
+    padding: 0px 36px;
+    flex: 0 1 33.333%;
+}
+.healthcare__block-text {
+    margin: 0px 0px 46px 0px;
+}
+.healthcare__items {
+    display: flex;
+    max-width: 985px;
+    margin: 0 auto;
+}
+.item-healthcare {
+    position: relative;
+    height: 100%;
+    z-index: 2;
+    background: #fff;
+    box-shadow: 0px 4px 18px rgba(88, 126, 236, 0.18);
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 17px 35px;
+}
+.item-healthcare__icon {
+    margin: 0px 0px 58px 0px;
+}
+.item-healthcare__title {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 138.5%;
+    color:#000;
+    margin: 0px 0px 4px 0px;
+}
+.item-healthcare__text {
+    line-height: 138.5%;
+}
+.healthcare__column_1:before,
+.healthcare__column_1:after,
+.healthcare__column_2::after,
+.healthcare__column_3::after{
+    content: '';
+    position: absolute;
+    background-color: #EC5863;
+    border-radius: 16px;
+}
+.healthcare__column_1:before{
+    width: 65px;
+    height: 65px;
+    bottom: -35px;
+    left: 15px;
+    transform: rotate(-30deg);
+}
+.healthcare__column_1:after{
+    width: 97px;
+    height: 97px;
+    top: 35px;
+    right: -10px;
+    transform: rotate(25deg);
+    border-radius: 30px;
+}
+.healthcare__column_2::after{
+    width: 127px;
+    height: 127px;
+    bottom: -26px;
+    right: -44px;
+    transform: rotate(55deg);
+    border-radius: 30px;
+}
+.healthcare__column_3::after{
+    width: 65px;
+    height: 65px;
+    top: -28px;
+    right: 17px;
+    transform: rotate(55deg);
+}
+/*==========================*/
+.footer {
+    padding: 45px 0;
+}
+.footer__items {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    column-gap: 50px;
+    row-gap: 20px;
+}
 @media(min-width: 991.98px){
     .stay-safe__media {
         padding: 0px 0px 0px 47px;
@@ -379,6 +480,9 @@ body{
 @media(max-width: 1087px){
     [class*="__container"]{
         max-width: 970px;
+    }
+    .healthcare__column{
+        padding: 0px 15px;
     }
 }
 @media(max-width: 991.98px){
@@ -401,6 +505,19 @@ body{
     }
     .stay-safe{
         padding: 40px 0;
+    }
+    .healthcare{
+        padding: 30px 0px 30px 0px;
+    }
+    .healthcare__items{
+        flex-direction: column;
+    }
+    .healthcare__column:not(:last-child){
+        margin: 0px 0px 25px 0px;
+    }
+    .healthcare__column_3::after{
+        top: 35px;
+        left: -12px;
     }
 }
 @media(max-width: 767.98px){
@@ -530,6 +647,26 @@ body{
     .media-stay-safe{
         width: 290px;
     }
+    .experts{
+        padding: 80px 0px 30px 0px;
+    }
+    .experts__body{
+        align-items: stretch;
+        flex-direction: column;
+    }
+    .experts__video{
+        padding: 0px 0px 58% 0px;
+    }
+    .experts__content{
+        padding: 0;
+        margin: 0px 0px 30px 0px;
+    }
+    .statistics-experts__body{
+        margin: 0px 0px 50px 0px;
+    }
+    .body-statistics-experts{
+        padding: 25px;
+    }
 }
 @media(max-width: 479.98px){
     .header__logo{
@@ -541,5 +678,17 @@ body{
     }
     .media-stay-safe{
         width: 290px;
+    }
+    .body-statistics-experts{
+        flex-direction: column;
+    }
+    .body-statistics-experts__item:not(:last-child){
+        margin: 0px 0px 15px 0px;
+    }
+    .footer{
+        padding: 30px 0px;
+    }
+    .footer__items{
+        flex-direction: column;
     }
 }
